--- a/Site/media/less/adm/menu.less
+++ b/Site/media/less/adm/menu.less
@@ -1,109 +1,99 @@
 /**
- * @version: $Id$
  * @package: SobiPro Component for Joomla!
 
  * @author
  * Name: Sigrid Suski & Radek Suski, Sigsiu.NET GmbH
  * Email: sobi[at]sigsiu.net
- * Url: http://www.Sigsiu.NET
+ * Url: https://www.Sigsiu.NET
 
- * @copyright Copyright (C) 2006 - 2015 Sigsiu.NET GmbH (http://www.sigsiu.net). All rights reserved.
+ * @copyright Copyright (C) 2006 - 2016 Sigsiu.NET GmbH (https://www.sigsiu.net). All rights reserved.
  * @license GNU/GPL Version 3
- * This program is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License version 3 as published by the Free Software Foundation, and under the additional terms according section 7 of GPL v3.
- * See http://www.gnu.org/licenses/gpl.html and http://sobipro.sigsiu.net/licenses.
+ * This program is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License version 3 as published
+ * by the Free Software Foundation, and under the additional terms according section 7 of GPL v3.
+ * See http://www.gnu.org/licenses/gpl.html and https://www.sigsiu.net/licenses.
 
- * This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License for more details.
-
- * $Date$
- * $Revision$
- * $Author$
+ * This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY
+ * or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License for more details.
  */
 
 
-div.SPcontentTabHeader a {
-    color: #0b55c4;
-    text-decoration: none;
-    font-weight: bold;
-}
+#SPaccordionTabs {
+	a:link {
+		color: #555555;
+	}
+	.well {
+		margin-bottom: 3px;
+	}
+	.accordion-heading .accordion-toggle {
+		padding: 8px 10px;
+	}
+	.accordion {
+		a {
+			color: #555555;
+		}
+		a:hover,
+		a:focus {
+			text-decoration: none;
+			color: #333333;
+		}
+		a:hover {
+			background-color: #eeeeee;
+		}
 
-div.SPcontentTabHeader a:hover {
-    text-decoration: underline;
-}
+		ul,
+		ol {
+			margin: 0 0 10px 2px;
+			list-style: none;
+			font-size: 13px;
+		}
 
-div.menuTreeSigsiuTree {
-   // margin-left: 15px;
-}
+		li a {
+			display: block;
+			padding: 3px 5px;
+			margin-left: -7px;
+			margin-right: -7px;
+			text-shadow: 0 1px 0 rgba(255, 255, 255, 0.5);
+			color: #555555;
+		}
+		li .active a,
+		li .active a:hover {
+		}
 
-#SPMenuCtrl {
-    margin: 5px;
+		a.SPMenuActive {
+			background-color: #993333;
+			color: #ffffff;
+			text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.2);
+		}
+
+		.accordion-inner {
+			min-height: 200px;
+		}
+	}
+
+	#SPMenuCtrl {
+		margin: 5px;
+		position: absolute;
+		margin-left: 0;
+		margin-top: 0;
+	}
 }
 
 #SPRightMenuHold {
-    margin-top: 52px;
-    margin-left: -15px;
-    margin-bottom: 9px;
-    position: absolute;
+	margin-top: 52px;
+	margin-left: -15px;
+	margin-bottom: 9px;
+	position: absolute;
 }
 
-#SPMenuCtrl {
-    position: absolute;
-    margin-left: 0px;
-    margin-top: 0px;
-}
-
-#SPaccordionTabs .well {
-    margin-bottom: 0;
-}
-
-#SPaccordionTabs .accordion-heading .accordion-toggle {
-    padding: 8px 10px;
-}
-
-#SpMenu .accordion-inner {
-  min-height: 200px;
-}
-
-#SPRightMenu .brand a {
-  color: #7f7f7f;
-}
-
-.SPmenuTabs a:link,
-.accordion a {
-    color: #555555;
-}
-.accordion a:hover {
-    background-color: #eeeeee;
-    color: #333333;
-    text-decoration: none;
-}
-.accordion a:focus {
-  text-decoration: none;
-  color: #333333;
-}
-
-.accordion ul,
-.accordion ol {
-    margin: 0 0 10px 2px;
-    list-style: none;
-    font-size: 13px;
-}
-
-.accordion li a {
-    display: block;
-    padding: 3px 5px;
-    margin-left: -7px;
-    margin-right: -7px;
-    text-shadow: 0 1px 0 rgba(255, 255, 255, 0.5);
-    color: #555555;
-}
-.accordion li .active a,
-.accordion li .active a:hover {
-}
-
-.accordion a.SPMenuActive {
-    background-color: #993333;
-    color: #ffffff;
-    text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.2);
+div.SPcontentTabHeader {
+	a {
+		color: #0b55c4;
+		text-decoration: none;
+		font-weight: bold;
+	}
+	a:hover {
+		text-decoration: underline;
+	}
 }
 
 
