--- a/Site/media/less/admicons.less
+++ b/Site/media/less/admicons.less
@@ -1,12 +1,13 @@
 #ns {
   .SobiPro() {
-  @import "../font-awesome";
+  @import "font-awesome";
   }
 }
 
 .SobiPro a [class^="icon-"],
 .SobiPro a [class*=" icon-"] {
     background-image: none;
+	margin-right: 0;
 }
 /** For Joomla! 3.0 default template */
 .SobiPro [class^="icon-"]::before,
